--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <script>var whTooltips = {colorLinks: true, iconizeLinks: false, renameLinks: true, iconSize: 'medium'};</script>
+    <script src="//wow.zamimg.com/widgets/power.js"></script>
+    
     <title>WoW Comparator</title>
   </head>
   <body>
@@ -13,5 +16,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
   </body>
 </html>
