--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <script>var whTooltips = {colorLinks: true, iconizeLinks: false, renameLinks: true, iconSize: 'medium'};</script>
     <script src="//wow.zamimg.com/widgets/power.js"></script>
     
