--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    <meta property="og:title" content="WoW Comparator">
+    <meta property="og:description" content="Compare your World of Warcraft Characters! Pets, Mounts, Gear, Stats, and more!" />
+    <meta name="description" content="Compare your World of Warcraft Characters! Pets, Mounts, Gear, Stats, and more!" />
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <script>var whTooltips = {colorLinks: true, iconizeLinks: false, renameLinks: true, iconSize: 'medium'};</script>
