--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
-    <meta property="og:title" content="WoW Comparator">
-    <meta property="og:description" content="Compare your World of Warcraft Characters! Pets, Mounts, Gear, Stats, and more!" />
-    <meta name="keywords" content="wow Comparator, wow compare, compare, wow, warcraft, world of warcraft compare"/>
-    <meta name="description" content="Compare your World of Warcraft Characters! Pets, Mounts, Gear, Stats, and more!" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <script>var whTooltips = {colorLinks: true, iconizeLinks: false, renameLinks: true, iconSize: 'medium'};</script>
+    <meta property="og:title" content="WoW Comparator" />
+    <meta
+      property="og:description"
+      content="Compare your World of Warcraft Characters! Pets, Mounts, Gear, Stats, and more!"
+    />
+    <meta
+      name="keywords"
+      content="wow Comparator, wow compare, compare, wow, warcraft, world of warcraft compare"
+    />
+    <meta
+      name="description"
+      content="Compare your World of Warcraft Characters! Pets, Mounts, Gear, Stats, and more!"
+    />
+    <link rel="icon" href="<%= BASE_URL %>favicon.png" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <script>
+      var whTooltips = {
+        colorLinks: true,
+        iconizeLinks: false,
+        renameLinks: true,
+        iconSize: 'medium'
+      };
+    </script>
     <script src="//wow.zamimg.com/widgets/power.js"></script>
-    
-    <title>WoW Comparator - Compare World of Warcraft Characters, Stats & More!</title>
+
+    <title>
+      WoW Comparator - Compare World of Warcraft Characters, Stats & More!
+    </title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-
   </body>
 </html>
